--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     container_name: sdlms-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER: sdlms
-      POSTGRES_PASSWORD: sdlms_password
-      POSTGRES_DB: sdlms
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
       TZ: UTC
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - ./data:/var/lib/postgresql/data
       - ./init:/docker-entrypoint-initdb.d
@@ -27,13 +27,13 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_HOST: db
-      POSTGRES_DB: sdlms
-      POSTGRES_USER: sdlms
-      POSTGRES_PASSWORD: sdlms_password
-      SCHEDULE: "0 3 * * *" # daily at 03:00 UTC
-      BACKUP_KEEP_DAYS: 7
-      BACKUP_KEEP_WEEKS: 4
-      BACKUP_KEEP_MONTHS: 6
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      SCHEDULE: "${BACKUP_SCHEDULE}" # daily at 03:00 UTC
+      BACKUP_KEEP_DAYS: ${BACKUP_KEEP_DAYS}
+      BACKUP_KEEP_WEEKS: ${BACKUP_KEEP_WEEKS}
+      BACKUP_KEEP_MONTHS: ${BACKUP_KEEP_MONTHS}
       BACKUP_DIR: /backups
       TZ: UTC
       POSTGRES_EXTRA_OPTS: "--clean --if-exists"
@@ -42,4 +42,20 @@ services:
     # Uncomment to run a one-off backup immediately after up
     # command: ["sh", "-c", "sleep 10 && /backup.sh"]
 
-volumes: {}
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: sdlms-pgadmin
+    restart: unless-stopped
+    depends_on:
+      - db
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    ports:
+      - "${PGADMIN_PORT}:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+
+volumes:
+  pgadmin_data:
