--- a/backend/.example.env
+++ b/backend/.example.env
@@ -3,3 +3,7 @@ JWT_SECRET=admin@sdlms2025
 PORT=4000
 NODE_ENV=development
 CLIENT_URL=http://192.168.100.28:5173,http://localhost:5173,http://localhost:3000
+CACHE_LOG=1
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_URL=redis://sdlms-redis:6379
