--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:dbml": "tsx src/db/dbml.ts"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -31,6 +32,8 @@
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "ioredis": "^5.4.1",
+  "prom-client": "^15.1.3",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -41,10 +44,11 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
+    "drizzle-dbml-generator": "^0.10.0",
     "drizzle-kit": "^0.31.4",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "tsx": "^4.20.4",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   }
