--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "chart.js": "^4.4.1",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
@@ -28,6 +30,7 @@
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "postgres": "^3.4.7",
+    "prom-client": "^15.1.3",
     "rate-limiter-flexible": "^7.2.0",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
