--- a/backend/.example.env
+++ b/backend/.example.env
@@ -1,9 +1,8 @@
 DATABASE_URL=postgresql://sdlms:sdlms_password@localhost:5432/sdlms
-# DATABASE_URL=postgresql://neondb_owner:npg_lR8adxJUBMF0@ep-purple-darkness-a1x0hk4n-pooler.ap-southeast-1.aws.neon.tech/sdlms?sslmode=require&channel_binding=require
 JWT_SECRET=admin@sdlms2025
 PORT=3000
 NODE_ENV=development
-CLIENT_URL=http://192.168.100.28:5173,http://localhost:5173,http://localhost:3000
+CLIENT_URL=http://localhost:5173,http://localhost:3000
 CACHE_LOG=1
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
